# zenodo-release-drift

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.agents/skills/ci-cd-and-automation/: SKILL.md
.agents/skills/code-review-and-quality/: SKILL.md
.agents/skills/debugging-and-error-recovery/: SKILL.md
.agents/skills/incremental-implementation/: SKILL.md
.agents/skills/learning-opportunities/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: draft-release.yml  publish-docs.yml  publish-pypi.yml  run-tests.yml  zenodo-release-drift.yml
docs/src/: conf.py  python-api.md
src/notebooks/: example_notebook.ipynb  example_notebook.py
src/zenodo_release_drift/: __init__.py  _version.py  cli.py  main.py
tests/: conftest.py  test_cli.py  test_main.py
