[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "zenodo-release-drift"
description = "Detect drift between GitHub releases and Zenodo archives"
readme = "README.md"
authors = [
  { name = "Dave Bunten" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "httpx>=0.28",
  "packaging>=24",
  "pygithub>=2.5",
  "tabulate>=0.9",
  "typer>=0.15.1",
]
scripts.zenodo-release-drift = "zenodo_release_drift.cli:trigger"

[dependency-groups]
dev = [
  "coverage[toml]>=7.10.6",
  "poethepoet>=0.34",
  "pytest>=8.3.5",
  "pytest-cov>=6.2.1",
  "pytest-httpx>=0.35",
]
docs = [
  "myst-nb>=1.2",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=8.2.3",
]
notebooks = [
  "black>=25.1",
  "isort>=6.0.1",
  "jupyterlab>=4.4.2",
  "jupyterlab-code-formatter>=3.0.2",
  "jupytext>=1.17.1",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = [ "src" ]
include = [ "zenodo_release_drift*" ]

[tool.setuptools_scm]
root = "."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/zenodo_release_drift/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]
# Ignore `F401` (unused imports) for `__init__.py` file
lint.per-file-ignores."__init__.py" = [ "F401" ]

[tool.pytest.ini_options]
pythonpath = [ "." ]
addopts = [
  "--cov=zenodo_release_drift",
  "--cov-report=term-missing",
  "--cov-report=xml",
]

[tool.coverage.run]
branch = true
source = [ "src/zenodo_release_drift" ]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.poe.tasks]
# tasks for development environments
test.shell = """
pytest
"""
lint.shell = """
pre-commit run --all-files
"""
pipeline.shell = """
pre-commit run --all-files && pytest
"""
jupyter.shell = """
jupyter lab
"""

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 90
paths = [ "src/zenodo_release_drift", "tests" ]
